--- a/requirements.txt
+++ b/requirements.txt
@@ -1,1 +1,7 @@
-Django==4.1.3
+asgiref==3.8.1
+Django==5.0.5
+django-crispy-forms==2.1
+django-environ==0.11.2
+psycopg2==2.9.9
+sqlparse==0.5.0
+tzdata==2024.1
